capacityplanner/force-app/main/default/objects/Location__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia/Kolkata</fullName>
                <default>true</default>
                <label>Asia/Kolkata</label>
            </value>
            <value>
                <fullName>Asia/Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>