capacityplanner/force-app/main/default/objects/Location__c/fields/Working_Hours_End__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_End__c</fullName>
    <label>Working Hours End</label>
    <type>Time</type>
</CustomField>