capacityplanner/force-app/main/default/objects/Location__c/fields/Working_Hours_Start__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Start__c</fullName>
    <label>Working Hours Start</label>
    <type>Time</type>
</CustomField>